# build-your-own-radar-as-code

./: Cargo.toml  README.md
blips-template/: _blip.md.template  _blip.yaml.template
blips-thoughtworks-vol21/: 0.blip.yaml.template  10x_engineers.blip.md  10x_engineers.blip.yaml  data_mesh.blip.md  data_mesh.blip.yaml
src/: blip_document.rs  main.rs
