[package]
name = "build-your-own-radar-as-code"
version = "0.1.0"
authors = ["gustavomonarin <gustavomonarin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
csv = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"