[package]
name = "build-your-own-radar-as-code"
description = "Build your tech radar as code. Write human readable blips and use the tw open source radar to visualize."
version = "0.2.0"
authors = ["gustavomonarin <gustavomonarin@gmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/gustavomonarin/build-your-own-radar-as-code"
repository = "https://github.com/gustavomonarin/build-your-own-radar-as-code"
keywords = ["cli", "tech-radar"]
categories = ["command-line-utilities"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.4.3"
structopt = "0.3"
csv = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
pulldown-cmark = "0.8"
glob = "0.3"